<resources>
    <string name="app_name">秋日大酒店管理系统</string>
    <string name="login_name_hint">管理员账号</string>
    <string name="login_password_hint">管理员密码</string>
    <string name="login_submit">登录</string>
    <string name="login_finger">使用指纹登录</string>
    <string name="finger_login_start">请验证您的指纹</string>
    <string name="finger_login_success">验证通过，正在登陆…</string>
    <string name="finger_login_nohardware">无指纹识别模块</string>
    <string name="finger_login_nofingerinfo">没有录入指纹</string>
    <string name="finger_login_nopermission">读取指纹权限被拒绝</string>
    <string name="finger_login_failed">指纹不匹配，请再试一次</string>
    <string name="finger_login_refuse">错误次数过多，请稍后再试</string>

    <string name="login_wrongname">账号不存在</string>
    <string name="login_wrongpassword">密码有误</string>
    <string name="hotelname">秋日大酒店</string>
    <string name="login_subtitle">后台管理系统</string>
    <string name="menu_logout">注销</string>
    <string name="menu_welcome">欢迎你，</string>
    <string name="tab_opmanage">操作员管理</string>
    <string name="tab_rtmanage">客房类型管理</string>
    <string name="tab_romanage">客房管理</string>
    <string name="btn_add">添加</string>
    <string name="btn_update">修改</string>
    <string name="btn_showallop">查看所有操作员</string>
    <string name="addop_name">操作员账号</string>
    <string name="addop_password">设定密码</string>
    <string name="addop_cpassword">确认密码</string>
    <string name="btn_submit">提交</string>
    <string name="title_addop">添加操作员</string>
    <string name="title_updateop">修改操作员</string>

    <string name="btn_back">返回</string>
    <string name="permission_denied">网络请求被拒绝</string>
    <string name="login_emptyname">账号不能为空</string>
    <string name="login_emptypassword">密码不能为空</string>
    <string name="login_noadmin">账号不存在</string>
    <string name="login_success">登陆成功</string>

    <string name="url_http_virtual">http://10.0.2.2:8080/AutumnHotel/</string>
    <string name="url_http_real">http://115.200.62.135:8080/AutumnHotel/</string>

    <string name="action_admin_loginresult">admin/AdminManage_adloginresult.action</string>
    <string name="action_admin_fingerlogin">admin/AdminManage_adfingerlogin.action</string>

    <string name="action_operator_addop">operator/OperatorManage_adaddoperator.action</string>
    <string name="action_operator_getallop">operator/OperatorManage_adgetalloperator.action</string>
    <string name="action_operator_upop">operator/OperatorManage_adupoperator.action</string>
    <string name="action_operator_delop">operator/OperatorManage_addeloperator.action</string>

    <string name="action_roomtype_addrt">roomtype/RoomtypeManage_adaddroomtype.action</string>
    <string name="action_roomtype_getallrt">roomtype/RoomtypeManage_adgetallroomtype.action</string>
    <string name="action_roomtype_uprt">roomtype/RoomtypeManage_aduproomtype.action</string>
    <string name="action_roomtype_delrt">roomtype/RoomtypeManage_addelroomtype.action</string>

    <string name="action_room_getallroom">room/RoomManage_adgetallroom.action</string>
    <string name="action_room_addroom">room/RoomManage_adaddroom.action</string>
    <string name="action_room_delroom">room/RoomManage_addelroom.action</string>

    <string name="addrt_wrongname">客房名已存在</string>

    <string name="addop_differentpassword">密码不一致</string>
    <string name="addop_wrongname">账号已存在</string>
    <string name="addrt_success">客房类型添加成功</string>
    <string name="uprt_success">客房类型修改成功</string>
    <string name="delrt_success">客房类型删除成功</string>
    <string name="yuan">元</string>
    <string name="canbook">可定</string>
    <string name="jian">间</string>
    <string name="updelrt_nort">暂无客房类型</string>
    <string name="title_updatert">修改客房类型</string>
    <string name="btn_deletesinglert">删除该客房类型</string>

    <string name="digitalonly">请输入纯数字</string>

    <string name="tag_success">success</string>
    <string name="tag_addresult">addresult</string>
    <string name="tag_upresult">upresult</string>
    <string name="tag_delresult">delresult</string>
    <string name="tag_wrongname">wrongname</string>
    <string name="tag_wrongpassword">wrongpassword</string>
    <string name="tag_resultinfo">resultinfo</string>
    <string name="tag_result">result</string>
    <string name="addop_success">操作员添加成功</string>
    <string name="btn_delete">删除</string>
    <string name="upop_password">设定新密码</string>
    <string name="btn_manage">管理</string>
    <string name="updelop_noop">暂无操作员</string>
    <string name="intent_wrong">网络异常，请检查网络连接后重试</string>
    <string name="ok">好</string>
    <string name="confirm">确定</string>
    <string name="cancel">取消</string>
    <string name="btn_deletesingleop">删除该操作员</string>
    <string name="delop_success">操作员删除成功</string>
    <string name="upop_success">修改操作员成功</string>
    <string name="addrt_title">添加客房类型</string>
    <string name="rt_rtname">客房类型名</string>
    <string name="rt_rtsize">房间大小</string>
    <string name="rt_rtnum">客房数量</string>
    <string name="rt_rtinfo">客房介绍</string>
    <string name="rt_baseprice">基准价格</string>
    <string name="rt_otherinfo">请选择附加属性</string>
    <string name="rt_freewifi">免费WiFi</string>
    <string name="rt_tv">电视</string>
    <string name="rt_freeline">有线宽带</string>
    <string name="rt_window">有窗</string>
    <string name="rt_squaremeter">(平方米)</string>
    <string name="rt_emptyname">客房名不能为空</string>
    <string name="rt_emptysize">大小不能为空</string>
    <string name="rt_emptynum">数量不能为空</string>
    <string name="rt_emptyprice">价格不能为空</string>

    <!-- 客房相关 -->
    <string name="room_add">添加客房：</string>
    <string name="room_delete">删除客房：</string>
    <string name="room_select">请选择</string>
    <string name="addroom_success">添加客房成功</string>
    <string name="delroom_success">删除客房成功</string>
    <string name="addroom_numtoobig">客房总数不得超过99间</string>
    <string name="delroom_numtoobig">删除客房数量不得大于当前客房</string>
    <string name="room_inputnum">请输入要添加的客房数量</string>


</resources>
