<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rootLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.MainActivity">
    <!-- 背景图片 -->
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/login_background"
        android:scaleType="centerCrop"
        android:src="@drawable/loginbackground"/>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="50dp"
        android:paddingLeft="30dp"
        android:paddingRight="30dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="32sp"
            android:textColor="@color/white"
            android:text="@string/hotelname"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:textSize="22sp"
            android:textColor="@color/white"
            android:text="@string/login_subtitle"/>
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_marginTop="10dp"
            android:layout_height="85dp">
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/login_aname"
                android:textColorHint="@color/white">
                <EditText
                    android:imeOptions="actionNext"
                    android:textSize="20sp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:hint="@string/login_name_hint"
                    android:maxLength="20"
                    />
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="110dp">
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:id="@+id/login_apassword"
                android:textColorHint="@color/white">
                <EditText
                    android:inputType="textPassword"
                    android:textSize="20sp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:hint="@string/login_password_hint"
                    android:maxLength="20"
                    />
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:id="@+id/button_login"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:text="@string/login_submit"
            android:textColor="@color/red"
            android:textSize="20sp"
            android:background="@drawable/button_login"
            />
        <Button
            android:id="@+id/btn_login_finger"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:layout_marginTop="20dp"
            android:text="@string/login_finger"
            android:textColor="@color/lightgreen"
            android:textSize="20sp"
            android:background="@drawable/button_fingerlogin" />
    </LinearLayout>

</RelativeLayout>
