<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
android:orientation="vertical"
android:layout_width="match_parent"
android:layout_height="match_parent"
    >
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:background="@color/lightyellow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:layout_gravity="center"
            android:textColor="@color/white"
            android:background="@android:color/transparent"
            style="?android:attr/borderlessButtonStyle"
            android:id="@+id/back"
            android:text="@string/btn_back"
            android:textSize="18sp"/>
        <TextView
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/addrt_title"
            android:layout_gravity="center"
            android:gravity="center"
            android:textSize="20sp"
            android:textColor="@color/white" />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:layout_gravity="center"
            android:textColor="@color/white"
            android:background="@android:color/transparent"
            style="?android:attr/borderlessButtonStyle"
            android:id="@+id/submit_add"
            android:textSize="18sp"
            android:text="@string/btn_submit"/>
    </LinearLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp">
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_marginTop="50dp"
                android:layout_height="85dp">
                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/addrt_name"
                    android:textColorHint="@color/deepyellow">
                    <EditText
                        android:imeOptions="actionNext"
                        android:textSize="20sp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:singleLine="true"
                        android:hint="@string/rt_rtname"
                        android:maxLength="20"
                        />
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="85dp">
                <android.support.design.widget.TextInputLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/addrt_size"
                    android:layout_weight="1"
                    android:textColorHint="@color/deepyellow">
                    <EditText
                        android:inputType="number"
                        android:textSize="20sp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:digits="1234567890"
                        android:maxLines="1"
                        android:hint="@string/rt_rtsize"
                        android:maxLength="5"
                        android:singleLine="true"
                        />
                </android.support.design.widget.TextInputLayout>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="25dp"
                    android:textSize="20sp"
                    android:textColor="@color/deepyellow"
                    android:text="@string/rt_squaremeter"/>
                <android.support.design.widget.TextInputLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="1"
                    android:id="@+id/addrt_num"
                    android:textColorHint="@color/deepyellow">
                    <EditText
                        android:textSize="20sp"
                        android:inputType="number"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:maxLines="1"
                        android:digits="1234567890"
                        android:hint="@string/rt_rtnum"
                        android:maxLength="2"
                        android:singleLine="true"
                        />
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="85dp">
                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/addrt_baseprice"
                    android:textColorHint="@color/deepyellow">
                    <EditText
                        android:inputType="number"
                        android:textSize="20sp"
                        android:digits="1234567890"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:maxLines="1"
                        android:hint="@string/rt_baseprice"
                        android:maxLength="5"
                        android:singleLine="true"
                        />
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/addrt_info"
                    android:textColorHint="@color/deepyellow">
                    <EditText
                        android:textSize="20sp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/rt_rtinfo"
                        />
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>